--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38889,3 +38889,26 @@ footer.bg-dark.angled.upper-start:before {
     position: relative;
   }
 }
+#gallery {
+    text-align: center;
+    padding: 20px;
+}
+
+#gallery .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#gallery img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    margin: 10px;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out;
+}
+
+#gallery img:hover {
+    transform: scale(1.05);
+}
