--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38949,7 +38949,7 @@ footer.bg-dark.angled.upper-start:before {
     color: #888;
 }
 header.wrapper.bg-sky {
-    background-image: url('фон4.jpg'); /* Путь к картинке */
+    background-image: url("фон4.jpg"); /* Путь к картинке */
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
