--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11281,7 +11281,18 @@ fieldset:disabled .btn {
   background-color: rgba(var(--bs-blue-rgb), var(--bs-bg-opacity)) !important;
 }
 
-
+.bg-sky {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-sky-rgb), var(--bs-bg-opacity));
+}
+.bg-sky {
+    background: none !important; /* Убираем цвет */
+    background-image: url('фон4.jpg') !important;
+    background-size: cover !important;
+    background-position: center !important;
+    background-attachment: fixed !important;
+    background-repeat: no-repeat !important;
+}
 .bg-purple {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-purple-rgb), var(--bs-bg-opacity)) !important;
