--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11283,7 +11283,7 @@ fieldset:disabled .btn {
 
 .bg-sky {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-sky-rgb), var(--bs-bg-opacity));
+  background-color: rgba(var(--bs-sky-rgb), var(--bs-bg-opacity))!important;
 }
 .bg-sky {
     background: none !important; /* Убираем цвет */
