--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11285,7 +11285,7 @@ fieldset:disabled .btn {
 }
 .bg-sky {
    
-    background-image: url('./фон4.jpg') !important;
+    background-image: url('фон4.jpg') !important;
     background-size: cover !important;
     background-position: center !important;
     background-attachment: fixed !important;
