--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33227,7 +33227,7 @@ img.svg-inject {
 [class*=" uil-"],
 [class^=icn-],
 [class*=" icn-"] {
-  speak: none;
+  /*speak: none;*/
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -36888,7 +36888,7 @@ img.svg-inject {
   line-height: 1;
   margin-bottom: 0.5rem;
 }
-@media (min-width: 1200px) {
+@media(min-width: 1200px) {
   .counter-wrapper .counter {
     font-size: 2rem;
   }
